color contrast fixes

--- a/nutritionLabel.css
+++ b/nutritionLabel.css
@@ -105,7 +105,7 @@
 }
 
 .nutritionLabel .dvCalorieDiet {
-	color: #777;
+	color: #707070;
 }
 .nutritionLabel .calorieNote {
 	padding: .60em 0 0 .70em;
@@ -117,7 +117,7 @@
 	font-size: .7em;
 	border-bottom: 1px solid #333;
 	text-align: left;
-	color: #777;
+	color: #707070;
 }
 .nutritionLabel .tblCalorieDiet {
 	width: 100%;
@@ -126,7 +126,7 @@
 	padding: 0;
 	line-height: normal;
 	font-size: .7em;
-	color: #777;
+	color: #707070;
 }
 .nutritionLabel .ar {
 	text-align: right;
@@ -139,7 +139,7 @@
 }
 
 .nutritionLabel #calcDisclaimer {
-	color: #777;
+	color: #707070;
 }
 
 .notApplicable{
